--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
     "react-parallax": "^3.5.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-scroll-trigger": "^0.6.14",
+    "react-slick": "^0.29.0",
     "sass": "^1.69.4",
+    "slick-carousel": "^1.8.1",
     "swiper": "^6.8.4",
     "web-vitals": "^2.1.4"
   },
