--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "formik": "^2.4.5",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
@@ -27,7 +28,8 @@
     "sass": "^1.69.4",
     "slick-carousel": "^1.8.1",
     "swiper": "^6.8.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
